Fixes some bugs

--- a/themes/default/list.html
+++ b/themes/default/list.html
@@ -68,8 +68,9 @@
 	</div>
 
 		<div class="infos">
-			<img src="" alt="" class="cc-by-sa" />
-			<span lang="fr" class="credits"><span>Blog sous licence <a href="https://fr.wikipedia.org/wiki/Licence_Creative_Commons"> CC-BY-SA</a> - </span><span lang="fr">Thème original par <a href="http://lehollandaisvolant.net/">Timo van Neerden</a></span>, <span lang="fr"> revisité par <a href="/">{blog_auteur}</a></span></span>
+			<p>
+				<span  lang="fr">Le contenu de ce blog est sous licence <a href="https://fr.wikipedia.org/wiki/Licence_Creative_Commons">CC-BY-NC-SA</a>  -  Pour plus d'informations, consulter les <a href="?legal">mentions légales</a></span>
+			</p>
 		</div>
 
 </footer>
